# exercise-tools

./: .gitignore  README.md  download_and_calculate.sh  pyproject.toml  settings.py
tools/: calculate_total.py  download_garmin_activities.py  merge_activities.py
