[tool.poetry]
name = "exercise-tools"
version = "0.1.0"
description = ""
authors = ["Janne Enberg <janne.enberg@lietu.net>"]
readme = "README.md"
packages = [
    { include = "tools" },
]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
humanize = "^4.9.0"
playwright = "^1.40.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
calculate-total = "tools.calculate_total:app"
merge-activities = "tools.merge_activities:app"
download-garmin-activities = "tools.download_garmin_activities:app"
